@@ -1,6 +1,10 @@
 2007-??-?? NetworkEditor 0.4.4 SVN $Revision$
 ''
  * Using CLAM 0.99.0
+ * Prototyper sets the name of the network as JACK client name
+ * More processings: Different IFFT and FFT implementations,
+   SpectrumSubstracter2, ...
+ * Fix: Can't change name of a processing (#166)
 
 2006-02-09 NetworkEditor 0.4.3
 'Mac is back to stay'
